tests/sumo/output/vtypeprobe/errors/freq_missing/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Attribute 'period' is missing in definition of vTypeProbe 'test1'.
Quitting (on error).
